Overflow bug solved

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,10 @@ body {
   max-width: 20%;
 }
 
+.dropdown-menu.show {
+  transform: translate3d(-47px, 23px, 0px);
+}
+
 @media (min-width: 992px) {
   .sidebar {
     width: 200px;
